added basic post service and controller
