# app/api/api.yml
@@ -9,6 +9,8 @@ tags:
     description: Homescreen
   - name: user
     description: User access
+  - name: post
+    description: Post operations
 paths:
   /:
     get:
@@ -106,6 +108,126 @@ paths:
                 $ref: '#/components/schemas/Error'
       security:
         - bearerAuth: []
+  /posts/mine:
+    get:
+      summary: 'My posts'
+      operationId: my_posts
+      tags:
+        - post
+      responses:
+        '200':
+          description: 'Sample response: List of my posts'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response'
+      security:
+        - bearerAuth: []
+  /posts/{post_id}:
+    get:
+      summary: 'Read post'
+      operationId: read_post
+      tags:
+        - post
+      parameters:
+        - name: post_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'Get post details'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response'
+        default:
+          description: 'Not found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - bearerAuth: []
+    delete:
+      summary: 'Delete post'
+      operationId: delete_post
+      tags:
+        - post
+      parameters:
+        - name: post_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'Post succesfully deleted'
+          content:
+            application/json:
+            schema:
+              $ref: '#/components/schemas/Response'
+        default:
+          description: 'Error occured'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - bearerAuth: []
+  /posts/create:
+    post:
+      summary: 'Create post'
+      operationId: create_post
+      tags:
+        - post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+      responses:
+        '201':
+          description: 'Post created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response'
+        default:
+          description: 'Error occured'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - bearerAuth: []
+  /posts/update:
+    put:
+      summary: 'Update post'
+      operationId': update_post
+      tags:
+        - post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+      responses:
+        '200':
+          description: 'Post updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response'
+        default:
+          description: 'Error occured'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - bearerAuth: []
 components:
   schemas:
     Login:
@@ -151,6 +273,19 @@ components:
       properties:
         access_token:
           type: string
+    Post:
+      type: object
+      required:
+        - title
+        - body
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        body:
+          type: string
     User:
       type: object
       required:
@@ -162,7 +297,7 @@ components:
           format: int64
         name:
           type: string
-        tag:
+        email:
           type: string
     ChangePassword:
       type: object
